<resources>
    <string name="PawSalon">PawSalon</string>
    <string name="get_started">Get Started</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="food_water_bowl"><![CDATA[Food & Water Bowl]]></string>
    <string name="play_pet_show_dog_shampoo_conditioner_anti_mange"><![CDATA[Play Pet Show Dog Shampoo & Conditioner Anti Mange]]></string>
    <string name="goodest_dog_wet_food_grilled_chicken_liver"><![CDATA[Goodest Dog Wet Food Grilled Chicken & Liver]]></string>
    <string name="password_security"><![CDATA[Password & Security]]></string>
    <string name="goodest_dog_wet_food_griled_chicken_liver"><![CDATA[Goodest Dog Wet Food Griled Chicken & Liver]]></string>
    <string name="play_pets_shampoo_conditioner_anti_tiques"><![CDATA[Play Pets Shampoo & Conditioner Anti Tiques]]></string>
    <string name="cut_styles"><![CDATA[Cut & Styles]]></string>
    <string name="app_name">Paw Salon</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_to_paw_salon">Login to Paw Salon</string>
    <string name="log_in_text">Login</string>
    <string name="welcome_back_please_enter_your_details">Welcome back! Please enter your details</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in_clickable_text">Sign In</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="enter_code">Enter code</string>
    <string name="continue_text">Continue</string>
    <string name="send_code_again">Send code again</string>
    <string name="short_desc">Easily book pet grooming and services, from quick trims to full pampering, right from your phone. Keep your pets looking and feeling their best with just a few taps!</string>
    <string name="greetings_main">Hello, Pawrent!</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters.</string>
    <string name="confirm_your_account">Confirm your account</string>
    <string name="a_verification_code_has_been_sent_to_your_phone">A verification code has been sent to your\nphone</string>
    <string name="background_image">*</string>
    <string name="app_logo">*</string>
    <string name="first_name">First Name</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="email_address">Email</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_a_pet">Add a pet</string>
    <string name="edit_username">Edit Username</string>
    <string name="fur_baby">Fur Baby</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="edit_name">Edit Name</string>
    <string name="at_icon">At Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="location_icon">Location Icon</string>
    <string name="edit_location">Edit Location</string>
    <string name="save_profile">Save Profile</string>
    <string name="add_pet_icon">Add Pet Icon</string>
    <string name="pet_image">Pet Image</string>
    <string name="pet_image_icon">Pet Image</string>
    <string name="enter_email_or_username">Enter email or username</string>
    <string name="email">Email</string>
    <string name="no_worries_we_ll_set_you_back_on_track">No worries! We\'ll set you back on track</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="continue_button">Continue</string>
    <string name="current_city">Current City</string>
    <string name="edit_gender">edit_Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="edit_pet_name">Edit Pet Name</string>
    <string name="edit_pet_age">Edit Pet Age</string>
    <string name="pet_breed">Pet Breed</string>
    <string name="personal_details">Personal Details</string>
    <string name="personaldetails">PersonalDetails</string>
    <string name="aboutpawsalon">aboutpawsalon</string>
    <string name="about_pawsalon">about_pawsalon</string>
</resources>