<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Edit User Profile -->
    <LinearLayout
        android:id="@+id/editUserProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/edit_profile"
            android:textColor="@color/my_primary"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/userProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/user_profile_image"
            android:scaleType="fitCenter"
            android:src="@drawable/profile_icon" />

        <!-- Avatar Button -->
        <Button
            android:id="@+id/add_Avatar_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/mamamoblue"
            android:fontFamily="@font/poppins_semibold"
            android:text="Choose an Avatar"
            android:textColor="@color/white" />

        <!-- Edit name -->
        <TextView
            android:id="@+id/userNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/edit_name"
            android:textColor="@color/my_primary"
            android:textSize="20sp" />

        <!-- Edit Username -->
        <LinearLayout
            android:id="@+id/usernameLayoutEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/atIconEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/at_icon"
                android:src="@drawable/at_icon" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsersUsernameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/edit_username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="12sp">

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <!-- Contact Info -->
        <TextView
            android:id="@+id/ContactInfoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Contact Info"
            android:textColor="@color/my_primary"
            android:textSize="16sp" />

        <!--Phone Num-->
        <LinearLayout
            android:id="@+id/phoneLayoutEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phoneIconEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/phone_icon"
                android:src="@drawable/phone_icon" />

            <EditText
                android:id="@+id/userPhoneEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/edit_phone_number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!--Basic Info-->
        <TextView
            android:id="@+id/BasicInfoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Basic Info"
            android:textColor="@color/my_primary"
            android:textSize="16sp" />

        <!--Gender Edit-->
        <LinearLayout
            android:id="@+id/GenderIconEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/genderLayoutEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/gender_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Gender"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/gender_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/edit_text_bg"
                    android:inputType="none"
                    android:padding="16dp"
                    android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/edit_location"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Edit Location-->
        <LinearLayout
            android:id="@+id/locationLayoutEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/locationIconEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/location_icon" />

            <EditText
                android:id="@+id/userLocationEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/current_city"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!--Save User Profile Button-->
        <Button
            android:id="@+id/saveUserProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/mamamoblue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/save_profile"
            android:textColor="@color/white" />
    </LinearLayout>
    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <!--app:menu="@menu/bottom_nav_menu" /-->
</androidx.constraintlayout.widget.ConstraintLayout>
