<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ForgotPasswordActivity">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/transwordlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <!-- CardView for Login/Signup options -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="320dp"
        android:layout_height="280dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/lightblue"
        app:cardCornerRadius="25dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:layout_constraintWidth_percent="0.85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Login Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="2dp"
                android:text="@string/forgot_password_text"
                android:textColor="@color/dark_teal_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Welcome Back Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:fontFamily="@font/poppins"
                android:text="@string/no_worries_we_ll_set_you_back_on_track"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- Username Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_pass_emailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:minHeight="62dp"
                app:endIconDrawable="@drawable/email_icon"
                app:endIconTint="@color/Gray"
                app:endIconContentDescription="@string/username"
                app:endIconMode="custom"
                app:errorTextAppearance="@style/CustomTextInputError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_pass_emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_your_email"
                    android:inputType="text"
                    android:maxLength="50"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/continue_bigBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_button"
                android:elevation="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/continue_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Background Illustration Image -->
    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/petsbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCard"
        app:layout_constraintWidth_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>