<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditPetProfile">

    <!-- Edit User Profile -->
    <LinearLayout
        android:id="@+id/editUserProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="Edit Pet Profile"
            android:textColor="@color/my_primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="Choose your pet"
            android:textColor="@color/my_primary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/dog_choice_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/image_button_states"
                android:contentDescription="Cat_button"
                android:scaleType="fitCenter"
                android:layout_marginEnd="20dp"
                android:src="@drawable/dog_transparent" />

            <ImageButton
                android:id="@+id/cat_choice_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/image_button_states"
                android:contentDescription="Cat_button"
                android:scaleType="fitCenter"
                android:layout_marginEnd="20dp"
                android:src="@drawable/cat_transparent" />

        </LinearLayout>

        <!-- Edit Name -->
        <LinearLayout
            android:id="@+id/pet_nameLayoutEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pet_nameLayoutEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/edit_pet_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="12sp">

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <!--Gender Edit-->
        <LinearLayout
            android:id="@+id/GenderIconEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/select_gender"
                android:textColorHint="@color/Gray"
                android:layout_marginTop="5dp"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/gender_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:inputType="none"
                    android:padding="16dp"
                    android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/edit_gender"
                    android:textColor="@color/my_primary"
                    android:textSize="12sp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Pet Age-->
        <LinearLayout
            android:id="@+id/pet_ageLayoutEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pet_ageEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/edit_pet_age"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!--Edit Location-->
        <LinearLayout
            android:id="@+id/pet_breedLayoutEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pet_breedEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/pet_breed"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!--Save User Profile Button-->
        <Button
            android:id="@+id/saveUserProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/mamamoblue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/save_profile"
            android:textColor="@color/white" />

    </LinearLayout>
    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <!--app:menu="@menu/bottom_nav_menu" /-->
</androidx.constraintlayout.widget.ConstraintLayout>